update handlers
