# backend/internal/app/app.go
@@ -18,8 +18,8 @@ func RunApp(cfg *config.Config) {
 
 	e.Use(middleware.Recover())
 	usersGroup := e.Group("/users")
-	chatsGroup := e.Group("/chats")
-	messagesGroup := e.Group("/messages")
+	/*chatsGroup := e.Group("/chats")
+	messagesGroup := e.Group("/messages")*/
 
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 
@@ -32,18 +32,20 @@ func RunApp(cfg *config.Config) {
 	usersGroup.DELETE("/username/:username", api.DeleteUserByUsername)
 	usersGroup.Use(logger.LogRequest)
 
-	chatsGroup.POST("/", api.CreateChat)
+	/*chatsGroup.POST("/", api.CreateChat)
 	chatsGroup.GET("/", api.GetChats)
-	chatsGroup.GET("/:id/messages", api.GetChatMessages)
-	chatsGroup.GET("/:id/users", api.GetChatUsers)
+	chatsGroup.GET("/messages/:id", api.GetChatMessages)
+	chatsGroup.GET("/users/:id", api.GetChatUsers)
 	chatsGroup.POST("/addUser", api.AddUserToChat)
 	chatsGroup.POST("/removeUser", api.RemoveUserFromChat)
 	chatsGroup.DELETE("/:id", api.DeleteChat)
+	chatsGroup.Use(logger.LogRequest)
 
-	messagesGroup.POST("/:chatID", api.CreateMessage)
+	messagesGroup.POST("/:id", api.CreateMessage)
 	messagesGroup.GET("/", api.GetMessages)
 	messagesGroup.DELETE("/:id", api.DeleteMessageByID)
 	messagesGroup.DELETE("/:chatID/:messageID", api.DeleteMessageByChatIDAndMessageID)
+	messagesGroup.Use(logger.LogRequest)*/
 
 	e.Logger.Fatal(e.Start(":1323"))
 }
